--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,24 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   font-size: 3rem;
+  color: white;
   line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+.nav-link {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.25rem;
+  color: white;
+  margin: 0 15px;
+}
+
+.navbar {
+  padding: 8px 16px 70px 0;
+}
+
+.navbar-brand {
+  font-size: 2.25rem;
 }
 
 .iphone {
