styled nav bar and download buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,23 +7,31 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   font-size: 3rem;
-  color: white;
   line-height: 1.5;
   margin-bottom: 30px;
 }
 
-.nav-link {
-  font-size: 1.25rem;
-  color: white;
-  margin: 0 15px;
-}
-
+/* Navigation Bar */
 .navbar {
   padding: 8px 16px 70px 0;
 }
 
 .navbar-brand {
+  font-family: 'Ubuntu';
   font-size: 2.25rem;
+  font-weight: bold;
+}
+
+.nav-link {
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-size: 1.25rem;
+  margin: 0 15px;
+}
+
+/* Download Button */
+.download-button {
+  margin: 5% 3% 5% 0;
 }
 
 /* .iphone {
@@ -37,5 +45,6 @@ h1 {
 }
 
 #title {
+  color: #fff;
   background-color: #FF4C68;
 }
