--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
   margin-bottom: 30px;
 }
@@ -34,11 +34,11 @@ h1 {
   margin: 5% 3% 5% 0;
 }
 
-/* .iphone {
-  -ms-transform: rotate(20deg);
-  transform: rotate(20deg);
-  margin: -10px 0px 0px -180px;
-} */
+/* Title Image */
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+}
 
 .container-fluid {
   padding: 3% 15%;
