added bootstrap styling and font awesome to feature section

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,15 @@ h1 {
   padding: 3% 15%;
 }
 
+/* Feature Section */
+.feature-icon {
+  color: #ef8172;
+}
+
+#features h3, p {
+  text-align: center;
+}
+
 #title {
   color: #fff;
   background-color: #FF4C68;
