--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,13 @@ h1 {
   margin-bottom: 30px;
 }
 
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 h3 {
   font-weight: 900;
   font-size: 1.5rem;
@@ -76,4 +83,24 @@ h3 {
 .container-fluid {
   color: #fff;
   background-color: #FF4C68;
+}
+
+/* Testimonials Section */
+.testimonial-section {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  width: 15%;
+  border-radius: 50%;
+  margin: 20px;
+}
+
+/* Press Section */
+.press-section {
+  background-color: #ef8172;
+  text-align: center;
 }
