--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,6 @@ h3 {
 
 /* Testimonials Section */
 .testimonial-section {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
@@ -99,8 +98,18 @@ h3 {
   margin: 20px;
 }
 
+.carousel-item {
+  padding: 7% 15%;
+}
+
 /* Press Section */
 .press-section {
   background-color: #ef8172;
   text-align: center;
+  padding-bottom: 5%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
 }
