--- a/css/styles.css
+++ b/css/styles.css
@@ -50,15 +50,20 @@ h3 {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  z-index: 0;
+  position: absolute;
+  right: 30%;
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 /* Feature Section */
 .features-section {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
 .features-box {
