--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,20 @@ h3 {
   right: 30%;
 }
 
+@media (max-width: 1028px) {
+  .title-section {
+    text-align: center;
+  }
+
+  .title-image {
+    width: 50%;
+    transform: rotate(0);
+    z-index: 0;
+    position: static;
+    right: 30%;
+  }
+}
+
 .container-fluid {
   padding: 3% 15% 7%;
 }
