--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ h3 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   font-size: 3.5rem;
+  line-height: 1.5;
 }
 
 /* Footer Section */
