--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -15,6 +16,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 3.5rem;
   line-height: 1.5;
   margin-bottom: 30px;
+  text-align: left;
 }
 
 /* Navigation Bar */
@@ -75,7 +77,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .features-box {
-  text-align: center;
   padding: 5%;
 }
 
@@ -105,9 +106,13 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Testimonials Section */
 .testimonial-section {
-  text-align: center;
   background-color: #ef8172;
   color: #fff;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -123,7 +128,6 @@ h1, h2, h3, h4, h5, h6 {
 /* Press Section */
 .press-section {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 5%;
 }
 
@@ -135,7 +139,6 @@ h1, h2, h3, h4, h5, h6 {
 /* Pricing Section */
 .pricing-section {
   padding: 100px;
-  text-align: center;
 }
 
 .pricing-column {
@@ -155,7 +158,6 @@ h1, h2, h3, h4, h5, h6 {
 /* CTA Section */
 .cta-section {
   padding: 7% 22%;
-  text-align: center;
   background-color: #ff4c68;
 }
 
@@ -170,7 +172,6 @@ h1, h2, h3, h4, h5, h6 {
 /* Footer Section */
 .footer-section {
   padding: 8% 18%;
-  text-align: center;
 }
 
 .footer-section p {
