--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,17 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
 }
 
+/* Sections */
+
+.colored-section {
+  background-color: #FF4C68;
+  color: #fff;
+}
+
+.white-section {
+  background-color: #fff;
+}
+
 /* Headings */
 .big-heading {
   font-family: 'Montserrat', sans-serif;
@@ -72,7 +83,6 @@ h1, h2, h3, h4, h5, h6 {
 /* Feature Section */
 .features-section {
   padding: 7% 15%;
-  background-color: #fff;
   position: relative;
 }
 
@@ -100,14 +110,11 @@ h1, h2, h3, h4, h5, h6 {
 /* Title Section */
 .title-section {
   padding: 3% 15% 7%;
-  color: #fff;
-  background-color: #FF4C68;
 }
 
 /* Testimonials Section */
 .testimonial-section {
   background-color: #ef8172;
-  color: #fff;
 }
 
 .testimonial-text {
@@ -158,11 +165,9 @@ h1, h2, h3, h4, h5, h6 {
 /* CTA Section */
 .cta-section {
   padding: 7% 22%;
-  background-color: #ff4c68;
 }
 
 .cta-heading {
-  color: #fff;
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   font-size: 3.5rem;
